# n-body-gravity

./: Cargo.toml  README.md  gravity.py  test.py
src/: billboard.wgsl  main.rs  octree.rs  render.rs  sim.rs
