[package]
name = "newtonian-gravity"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
glam = { version = "0.30.8", features = ["bytemuck"] }
parking_lot = "0.12.5"
pollster = "0.4.0"
rand = "0.9.2"
rayon = "1.11.0"
wgpu = "27.0.1"
winit = "0.30.12"
